[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phash-dedup"
version = "0.1.0"
description = "Perceptual-hash (pHash) based near-duplicate image clustering, with a CLI."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "daichi-0818" }]
keywords = ["phash", "perceptual-hash", "image-deduplication", "duplicate-detection", "dct"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
phash-dedup = "phash_dedup.cli:main"

[project.urls]
Homepage = "https://github.com/daichi-0818/phash-dedup"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
